liferay-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: liferay
  name: liferay--cluster
spec:
  ports:
  - name: "8080"
    port: 8080
  selector:
    app: liferay

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: liferay
  name: liferay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: liferay
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: liferay
    spec:
      containers:
      - env:
        - name: LIFERAY_JAVA_OPTS
          value: -Xms2g -Xmx2g
        - name: LIFERAY_MODULE_PERIOD_FRAMEWORK_PERIOD_PROPERTIES_PERIOD_OSGI_PERIOD_CONSOLE
          value: 0.0.0.0:11311
        - name: LIFERAY_WEB_PERIOD_SERVER_PERIOD_DISPLAY_PERIOD_NODE
          value: "true"
        - name: LIFERAY_REDIRECT_PERIOD_URL_PERIOD_SECURITY_PERIOD_MODE
          value: "domain"
        image: liferay/portal:7.3.1-ga2
        resources:
          requests:
            memory: "2048Mi"
            cpu: "2"
          limits:
            memory: "4098Mi"
            cpu: "3"
        name: liferay
        ports:
        - containerPort: 11311
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: "/c/portal/layout"
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 15
          failureThreshold: 3
          successThreshold: 3
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 20
          failureThreshold: 3
          successThreshold: 1
        volumeMounts:
        - mountPath: /opt/liferay/data
          name: liferay-data
        - mountPath: /mnt/liferay
          name: liferay-config
      restartPolicy: Always
      volumes:
      - name: liferay-data
        persistentVolumeClaim:
          claimName: liferay-data
      - name: liferay-config
        persistentVolumeClaim:
          claimName: liferay-config
